Fixed Image Alts, renamed awesomesights main page

--- a/Awesome Sights/awesomesights.html
+++ b/Awesome Sights/awesomesights.html
@@ -26,7 +26,7 @@
     <ul>
       <li>
         <figure>
-          <img src="https://images.pexels.com/photos/163037/london-street-phone-cabin-163037.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+          <img src="https://images.pexels.com/photos/163037/london-street-phone-cabin-163037.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Image of UK">
           <figcaption><h3>UK Sights</h3></figcaption>
         </figure>
         <p>
@@ -36,7 +36,7 @@
       </li>
       <li>
         <figure>
-          <img src="https://images.pexels.com/photos/1388030/pexels-photo-1388030.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+          <img src="https://images.pexels.com/photos/1388030/pexels-photo-1388030.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Image of Spain">
           <figcaption><h3>Sights in Spain</h3></figcaption>
         </figure>
         <p>
@@ -46,7 +46,7 @@
       </li>
       <li>
         <figure>
-          <img src="https://images.pexels.com/photos/442583/pexels-photo-442583.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+          <img src="https://images.pexels.com/photos/442583/pexels-photo-442583.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Image of Czechia">
           <figcaption><h3>Sights in Czechia</h3></figcaption>
         </figure>
         <p>
