rename AwesomeSights folder, and corrected link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Coding</h1>
-  <a href="/Awesome Sights/awesomesights.html">Awesome Sights - Example Website</a>
+  <a href="/AwesomeSights/awesomesights.html">Awesome Sights - Example Website</a>
   <h1>Psychology</h1>
 </body>
 </html>
