--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
   <h1>Coding</h1>
   <a href="/AwesomeSights/awesomesights.html">Awesome Sights - Example Website</a>
+  <a href="/GTRPhotoLayout/gtrphotolayout.html">GTR Photos - Example Website</a>
   <h1>Psychology</h1>
 </body>
 </html>
