--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Coding</h1>
-  <a href="/AwesomeSights/awesomesights.html">Awesome Sights - Example Website</a>
+  <a href="/AwesomeSights/awesomesights.html">Awesome Sights - Example Website</a><br>
   <a href="/GTRPhotoLayout/gtrphotolayout.html">GTR Photos - Example Website</a>
   <h1>Psychology</h1>
 </body>
