--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Coding</h1>
-  <a href="/AwesomeSights/awesomesights.html">Awesome Sights - Example Website</a><br>
-  <a href="/GTRPhotoLayout/gtrphotolayout.html">GTR Photos - Example Website</a>
-  <h1>Psychology</h1>
+  <h1>Watch this space!</h1.
 </body>
 </html>
